Replace all the files

--- a/index.html
+++ b/index.html
@@ -3,27 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple UI</title>
     <link rel="stylesheet" href="style.css">
-    <title> Himal </title>
 </head>
 <body>
     <div class="box">
+        <div class="photo_name">
+            <img src="assets/himal.jpg" alt="Himal Bhandari" style="width: 200px; height: 200px;">
+            <h2>Himal Bhandari                
+            </h2>
+        </div>
+
+        
+
+        <h1 class="head1"> Greatest Scientist Of All Time </h1> <hr><br>
+
+        <p class="paragraph">
+            Himal Bhandari is a versatile individual known for his contributions in various fields, including technology and community service. With a background in engineering, he has a knack for innovative solutions that bridge the gap between technology and everyday life. Himal is also passionate about environmental sustainability, often participating in initiatives that promote green practices. His dedication to uplifting local communities through education and mentorship reflects his belief in the power of knowledge and collaboration. Whether working on tech projects or engaging in social causes, Himal's commitment to making a positive impact is evident in all his endeavors.
+        </p><br><br>
+
+        <h2>Biographies</h2><hr> <br> <br>
+        <ul>
+            <li><H4>Profession:</H4> 
+                Engineer and community developer</li>
+            <li><H4>Education:</H4> Background in engineering</li>
+            <li><H4>Focus Area:</H4>
+                    Technology innovation
+                    ,Software development,
+                    Environmental sustainability
+            </li>
+            <li><H4> Community Involvement: </H4>
+               
+                    Active in educational initiatives,
+                    Mentorship for underprivileged youth
+            </li>
+            <li>Philosophy: Believes in collective growth and empowerment</li>
+            <li>Impact: Aims to inspire meaningful change through various projects and initiatives.</li>
+        </ul>
     </div>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
 </body>
 </html>
